// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components - MegaNavESI:  When running on the client should match the snapshot 1`] = `
<DocumentFragment>
  <div
    data-testid="header-meganav"
    id="meganav-internal-entrypoint"
    style="min-height: 1px; position: relative; z-index: 1;"
  />
</DocumentFragment>
`;

exports[`Components - MegaNavESI:  When running on the client should match the snapshot when show date is null 1`] = `
<DocumentFragment>
  <div
    data-testid="header-meganav"
    id="meganav-internal-entrypoint"
    style="min-height: 1px; position: relative; z-index: 1;"
  />
</DocumentFragment>
`;

exports[`Components - MegaNavESI:  When running on the server should match the snapshot 1`] = `
<DocumentFragment>
  <div
    data-testid="header-meganav"
    id="meganav-internal-entrypoint"
    style="min-height: 1px; position: relative; z-index: 1;"
  >
    <esi:include
      onerror="continue"
      src="/batman/meganav?time-machine-date=20200102"
    />
  </div>
</DocumentFragment>
`;

exports[`Components - MegaNavESI:  When running on the server should match the snapshot when show date is null 1`] = `
<DocumentFragment>
  <div
    data-testid="header-meganav"
    id="meganav-internal-entrypoint"
    style="min-height: 1px; position: relative; z-index: 1;"
  >
    <esi:include
      onerror="continue"
      src="/batman/meganav"
    />
  </div>
</DocumentFragment>
`;
